@@ -9,8 +9,6 @@
 
 * : Support Suspend Hybrid! ( DeviceKit power will not support this ).
     
-* : Probably an exit option in the context menu?
-
 * : Use the session logout when we do shutdown, probably use the shutdown session interface anyway.
 
 * : Translations need to be updated.
