@@ -1,4 +1,7 @@
 
+2009-04-02 15:36 Ali aliov@xfce.org 
+	 * : Added exit option in the context menu+some optimization to function calls in libxfpm common
+
 2009-04-02 14:14 Ali aliov@xfce.org 
 	 * : Added on battery DBus signal+Fix brightness settings on battery power
 
